# ply-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: api-compat.yml  ci.yml  miri.yml  rust.yml  static.yml
example_plys/: colors_normals_cameras.ply  tetrahedron_ascii.ply  tetrahedron_big_endian.ply  tetrahedron_little_endian.ply
examples/: colors_normals_cameras.rs  read_diverse_field_types.rs  read_diverse_field_types_with_mesh_macro.rs  read_ply.rs  read_ply_header_only.rs  read_ply_to_structs.rs  read_with_macro.rs  write_empty_ply.rs  write_ply.rs  write_tetrahedron.rs  write_tetrahedron_with_macro.rs  write_with_macro.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read_header.rs  read_ply.rs
ply-rs-macros/: Cargo.toml
ply-rs-macros/src/: lib.rs  tests.rs
src/: errors.rs  lib.rs  serde_impl.rs  util.rs
src/parser/: mod.rs  ply_grammar.rs
src/ply/: consistency.rs  default_element.rs  key_map.rs  ply_data_structure.rs  property.rs
src/writer/: mod.rs
tests/: list_wide_int_conversion.rs  macro_integration.rs  macro_tests.rs  mod_rs.rs  more_read.rs  read.rs  serde_integration.rs  synonym_support.rs  trybuild.rs  wide_int_getters.rs  write.rs
tests/ui/: fromply_alias_collision.rs  fromply_alias_collision.stderr  fromply_reject_type.rs  fromply_reject_type.stderr  plyread_alias_collision.rs  plyread_alias_collision.stderr  plyread_alias_duplicate_across_repeated_name.rs  (+25 more)
tests/ui-pass/: plyread_explicit_type_widen.rs  plyread_no_struct_default.rs  plyread_repeated_name_union.rs  plywrite_explicit_type_narrow.rs
