[package]
name = "ply-rs-bw"
version = "4.0.0"
authors = ["Felice Serena <felice@serena-mueller.ch>","Bourumir Wyngs<audrius.meskauskas@gmail.com"]
repository = "https://github.com/bourumir-wyngs/ply-rs"
homepage = "https://github.com/bourumir-wyngs/ply-rs"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/ply-rs-bw/latest/ply_rs_bw"
description = "Library for reading/writing ascii and binary PLY files."
keywords = [ "ply" ]
categories = [ "encoding", "parsing" ]
exclude = [
    "scripts/*"
]
edition = "2024"

[dependencies]
indexmap = "^2"
byteorder = "^1.5"
peg = "^0.8.5"
ply-rs-macros = { path = "ply-rs-macros" }
thiserror = "2.0.18"
serde = "1.0"

[dev-dependencies]
doc-comment = "^0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "read_ply"

[[example]]
name = "write_ply"

[[example]]
name = "read_ply_header_only"

[[example]]
name = "read_ply_to_structs"

[[example]]
name = "read_diverse_field_types"

[[example]]
name = "read_with_macro"

[[example]]
name = "write_empty_ply"
