[package]
name = "ply-rs-bw-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ply-rs-bw]
path = ".."

[[bin]]
name = "read_ply"
path = "fuzz_targets/read_ply.rs"
test = false
doc = false

[[bin]]
name = "read_header"
path = "fuzz_targets/read_header.rs"
test = false
doc = false
